tests/NormalTests/paczka1/small_fuzzy/29324719.err
Error in line 2: YABHgC58p S636 33,0
Error in line 4: iu6g2eA0m A131 82,3
